--- a/source/Libraries/MessagePack.CryptoDto/MessagePack.CryptoDto.csproj
+++ b/source/Libraries/MessagePack.CryptoDto/MessagePack.CryptoDto.csproj
@@ -1,17 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netcoreapp3.0;netcoreapp3.1;netcoreapp5.0</TargetFrameworks>
+	<LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MessagePack" Version="2.1.90" />
-    <PackageReference Include="System.Memory" Version="4.5.3" />
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.0" />
+    <PackageReference Include="MessagePack" Version="2.1.165" />
+    <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="6.1.1" />
+    <PackageReference Include="System.Buffers" Version="4.5.1" />
+    <PackageReference Include="System.Memory" Version="4.5.4" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NaCl.Core\NaCl.Core.csproj" />
   </ItemGroup>
+
+  <PropertyGroup Condition="$(TargetFramework) == 'netcoreapp3.0' OR $(TargetFramework) == 'netcoreapp3.1' OR $(TargetFramework) == 'netcoreapp5.0'">
+	<DefineConstants>NETCORE</DefineConstants>
+  </PropertyGroup>
 
 </Project>
