--- a/source/GeoVR.Client/GeoVR.Client.csproj
+++ b/source/GeoVR.Client/GeoVR.Client.csproj
@@ -87,20 +87,17 @@
     <EmbeddedResource Include="Samples\WhiteNoise_f32.wav" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Concentus">
-      <Version>1.1.7</Version>
-    </PackageReference>
     <PackageReference Include="Costura.Fody">
       <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="NAudio">
-      <Version>1.9.0</Version>
+      <Version>1.10.0</Version>
     </PackageReference>
     <PackageReference Include="NLog">
-      <Version>4.6.8</Version>
+      <Version>4.7.6</Version>
     </PackageReference>
     <PackageReference Include="RestSharp">
-      <Version>106.6.10</Version>
+      <Version>106.11.7</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +108,10 @@
     <ProjectReference Include="..\GeoVR.Shared\GeoVR.Shared.csproj">
       <Project>{f1485964-220b-4596-8dbd-2186cea960e1}</Project>
       <Name>GeoVR.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Libraries\GeoVR.Opus\GeoVR.Opus.csproj">
+      <Project>{6849a49e-4c16-40e5-98b0-9b8e443c210e}</Project>
+      <Name>GeoVR.Opus</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
