Updated version numbers to 2.0.0.0

--- a/source/GeoVR.Shared/GeoVR.Shared.csproj
+++ b/source/GeoVR.Shared/GeoVR.Shared.csproj
@@ -1,17 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<Version>2.0.0</Version>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MessagePack" Version="2.3.75" />
-    <PackageReference Include="MessagePackAnalyzer" Version="2.3.75" />
-    <PackageReference Include="morelinq" Version="3.3.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MessagePack" Version="2.3.75" />
+		<PackageReference Include="MessagePackAnalyzer" Version="2.3.75" />
+		<PackageReference Include="morelinq" Version="3.3.2" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Libraries\MessagePack.CryptoDto\MessagePack.CryptoDto.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Libraries\MessagePack.CryptoDto\MessagePack.CryptoDto.csproj" />
+	</ItemGroup>
 
 </Project>
