--- a/source/GeoVR.Connection/GeoVR.Connection.csproj
+++ b/source/GeoVR.Connection/GeoVR.Connection.csproj
@@ -1,20 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.0</Version>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="NetMQ" Version="4.0.1.6" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="NLog" Version="4.7.11" />
-		<PackageReference Include="RestSharp" Version="106.12.0" />
-		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.12.2" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\GeoVR.Shared\GeoVR.Shared.csproj" />
-	</ItemGroup>
-
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <Version>2.2.0</Version>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="NetMQ" Version="4.0.1.6" />
+    <PackageReference Include="NLog" Version="4.7.11" />
+    <PackageReference Include="RestSharp" Version="112.1.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.12.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GeoVR.Shared\GeoVR.Shared.csproj" />
+  </ItemGroup>
 </Project>
