--- a/source/GeoVR.Shared/GeoVR.Shared.csproj
+++ b/source/GeoVR.Shared/GeoVR.Shared.csproj
@@ -1,18 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>2.2.0</Version>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="MessagePack" Version="2.3.75" />
-		<PackageReference Include="MessagePackAnalyzer" Version="2.3.75" />
-		<PackageReference Include="morelinq" Version="3.3.2" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\Libraries\MessagePack.CryptoDto\MessagePack.CryptoDto.csproj" />
-	</ItemGroup>
-
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <Version>2.2.0</Version>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="MessagePack" Version="2.3.75" />
+    <PackageReference Include="MessagePackAnalyzer" Version="2.3.75" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Libraries\MessagePack.CryptoDto\MessagePack.CryptoDto.csproj" />
+  </ItemGroup>
 </Project>
